@@ -16,7 +16,6 @@ import com.googlecode.gmail2ldap.config.Config;
 import com.googlecode.gmail2ldap.gmail.Contacts;
 import com.googlecode.gmail2ldap.gui.ProjectSystemTray;
 import com.googlecode.gmail2ldap.gui.SynchronizeListener;
-import com.googlecode.gmail2ldap.ldap.Constants;
 import com.googlecode.gmail2ldap.ldap.Loader;
 import com.googlecode.gmail2ldap.ldap.Server;
 
@@ -42,12 +41,12 @@ public class Main {
 		server.start();
 
 		final DirectoryService service = server.getLdapServer().getDirectoryService();
-		final Loader loader = new Loader(service, Constants.PARTITION_ID);
 		final ProjectSystemTray systemTray = new ProjectSystemTray();
 
 		for (final Account account : accounts) {
 			logger.info(account.getUsername() + " " + account.getEmail() + " " + account.getPassword());
-			loader.createRoot(account.getUsername());
+			final Loader loader = new Loader(service, account.getUsername());
+			loader.createRoot();
 
 			final Contacts contacts = new Contacts(account);
 			final ActionListener synchronizeListener = new SynchronizeListener(contacts, loader);
