@@ -4,6 +4,7 @@ log4j.rootLogger=INFO, CONSOLE
 log4j.logger.com.googlecode.gmail2ldap = DEBUG
 
 log4j.logger.org.apache.directory = INFO
+# log4j.logger.org.apache.directory.server.core = DEBUG
 log4j.logger.org.apache.directory.server.schema.registries=INFO
 log4j.logger.org.apache.directory.server.core.avltree=INFO
 log4j.logger.org.apache.directory.server.core.schema=INFO
